# skillgraph

./: .gitignore  README.md  hello.py  pyproject.toml
src/skillgraph/: test.py
src/skillgraph/setup/: cli_tool.py  graph.py  subjects.py  topics.py
