[project]
name = "skillgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "authlib>=1.3.2",
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "pyvis>=0.3.2",
    "requests>=2.32.3",
    "ruff>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
